// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should allow id overriding 1`] = `
<div
  class="block overflow_hidden center_mobile_base root_default_base"
>
  <div
    class="block"
  >
    <div
      aria-orientation="horizontal"
      class="block display_block width_full flexWrap_nowrap root_base block colours_neutral_base noWrap"
      role="tablist"
    >
      <button
        aria-controls="tab-1-title-0"
        aria-selected="true"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base root_active_base"
        role="tab"
      >
        <span
          class="item"
        >
          tab 1 title
        </span>
      </button>
      <button
        aria-controls="tab-2-title-1"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <span
          class="item"
        >
          tab 2 title
        </span>
      </button>
      <button
        aria-controls="tab-3-title-2"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <span
          class="item"
        >
          tab 3 title
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should allow rendering indications 1`] = `
<div
  class="block overflow_hidden center_mobile_base root_default_base"
>
  <div
    class="block"
  >
    <div
      aria-orientation="horizontal"
      class="block display_block width_full flexWrap_nowrap root_base block colours_neutral_base noWrap"
      role="tablist"
    >
      <button
        aria-controls="od-11-0-tab"
        aria-selected="true"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base root_active_base"
        role="tab"
      >
        <div
          class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap center_mobile_base 2_mobile_base 2_mobile_base"
        >
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="item"
            >
              tab 1 title
            </span>
          </div>
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="inlineText display_block textAlign_center root_base inlineText colours_white_base fontWeight_bold_base sizes_2_base indication_default_base block 1_mobile_base 1_mobile_base display_inlineBlock pill_mobile_base indication_active_base"
            >
              5
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="od-11-1-tab"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <div
          class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap center_mobile_base 2_mobile_base 2_mobile_base"
        >
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="item"
            >
              tab 2 title
            </span>
          </div>
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="inlineText display_block textAlign_center root_base inlineText colours_dark_base fontWeight_bold_base sizes_2_base indication_default_base block 1_mobile_base 1_mobile_base display_inlineBlock pill_mobile_base"
            >
              5
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="od-11-2-tab"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <div
          class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_nowrap center_mobile_base 2_mobile_base 2_mobile_base"
        >
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="item"
            >
              tab 3 title
            </span>
          </div>
          <div
            class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
          >
            <span
              class="inlineText display_block textAlign_center root_base inlineText colours_dark_base fontWeight_bold_base sizes_2_base indication_default_base block 1_mobile_base 1_mobile_base display_inlineBlock pill_mobile_base"
            >
              5
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should match snapshot (high level) 1`] = `
<div
  class="block overflow_hidden center_mobile_base root_default_base"
>
  <div
    class="block"
  >
    <div
      aria-orientation="horizontal"
      class="block display_block width_full flexWrap_nowrap root_base block colours_neutral_base noWrap"
      role="tablist"
    >
      <button
        aria-controls="od-1-0-tab"
        aria-selected="true"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base root_active_base"
        role="tab"
      >
        <span
          class="item"
        >
          tab 1 title
        </span>
      </button>
      <button
        aria-controls="od-1-1-tab"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <span
          class="item"
        >
          tab 2 title
        </span>
      </button>
      <button
        aria-controls="od-1-2-tab"
        aria-selected="false"
        class="appearance cursorPointer trimmedBlockElement button 6_mobile_base display_inlineFlex backgroundColours_transparent_base center_mobile_base root_base block colours_muted_base fontWeight_bold_base noWrap sizes_3_base root_default_base"
        role="tab"
        tabindex="-1"
      >
        <span
          class="item"
        >
          tab 3 title
        </span>
      </button>
    </div>
  </div>
</div>
`;
